--- a/angular-demo/src/app/app.component.html
+++ b/angular-demo/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light p-5 my-3">
-    <a class="navbar-brand">Encryption Decryption with SHA 256</a>
+  <nav class="navbar navbar-expand-lg p-5 my-3" style="background-color: #156571;color: white;">
+    <a style="color: white;" class="navbar-brand">Encryption Decryption with SHA 256</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a routerLink="encryptions" routerLinkActive="active" class="nav-link">Encryption Data List</a>
+          <a style="color: white;" routerLink="encryptions" routerLinkActive="active" class="nav-link">Encryption Data List</a>
         </li>
         <li class="nav-item">
-          <a routerLink="create-encryption" routerLinkActive="active" class="nav-link">Encrypt Data</a>
+          <a style="color: white;" routerLink="create-encryption" routerLinkActive="active" class="nav-link">Encrypt Data</a>
         </li>
       </ul>
     </div>
