--- a/angular-demo/src/app/encryption-details/encryption-details.component.html
+++ b/angular-demo/src/app/encryption-details/encryption-details.component.html
@@ -2,20 +2,38 @@
     <div class="card-header p-3">
         Details
     </div>
-    <div class="card-body">
-        <div class="table">
-          <tr>
-              <td class="p-3"> <b> Raw Data: </b></td>
-              <td class="p-3">{{encryption.rawData}}</td>
-          </tr>
-          <tr>
-              <td class="p-3"> <b> Security Key: </b></td>
-              <td class="p-3">{{encryption.securityKey}}</td>
-          </tr>
-          <tr>
-              <td class="p-3"> <b> Encrypted Value: </b></td>
-              <td class="p-3">{{encryption.encryptedValue}}</td>
-          </tr>
+    <form  (ngSubmit) = "onSubmit()">
+      <div class="card-body">
+            <div class="table">
+              <tr>
+                  <td class="p-3"> <b> Raw Data: </b></td>
+                  <td class="p-3">
+                    {{encryption.rawData}}
+                    <input type="hidden" class="form-control" id="rawData" placeholder="raw Data"
+                    [(ngModel)] = "encryption.rawData" name="rawData">
+                  </td>
+              </tr>
+              <tr>
+                  <td class="p-3"> <b> Security Key: </b></td>
+                  <td class="p-3">
+                    {{encryption.securityKey}}
+                    <input type="hidden" class="form-control" id="securityKey" placeholder="Security key"
+                    [(ngModel)] = "encryption.securityKey" name="securityKey">
+                  </td>
+              </tr>
+              <tr>
+                  <td class="p-3"> <b> Encrypted Value: </b></td>
+                  <td class="p-3">
+                    {{encryption.encryptedValue}}
+                    <input type="hidden" class="form-control" id="encryptedValue" placeholder="Security key"
+                    [(ngModel)] = "encryption.encryptedValue" name="encryptedValue">
+                  </td>
+              </tr>
+              <tr>
+                <td></td>
+                <td class="p-3"><button type="submit" class="btn btn-outline-dark">Decrypt</button></td>
+              </tr>
+          </div>
       </div>
-  </div>
+    </form>
 </div>
