--- a/angular-demo/src/app/encryption-list/encryption-list.component.html
+++ b/angular-demo/src/app/encryption-list/encryption-list.component.html
@@ -20,10 +20,9 @@
         <td> {{ encryption.securityKey }} </td>
         <td> {{ encryption.encryptedValue }} </td>
         <td>
-          <!-- <button (click) = "updateEncryption(encryption.id)" class = "btn btn-success"><i class="fa fa-arrows"></i></button> -->
-          <button (click) = "updateEncryption(encryption.id)" class = "btn btn-warning" style="margin-left: 10px"><i class="fa fa-edit"></i></button>
+          <button (click) = "updateEncryption(encryption.id)" class = "btn btn-warning"><i class="fa fa-edit"></i> Encrypt </button>
+          <button (click) = "encryptionDetails(encryption.id)" class = "btn btn-dark" style="margin-left: 10px"><i class="fa fa-eye"></i> Decrypt </button>
           <button (click) = "deleteEncryption(encryption.id)" class = "btn btn-danger" style="margin-left: 10px"><i class="fa fa-trash"></i></button>
-          <button (click) = "encryptionDetails(encryption.id)" class = "btn btn-dark" style="margin-left: 10px"><i class="fa fa-eye"></i></button>
         </td>
       </tr>
     </tbody>
